# mir-ci

./: .gitignore  .lfsconfig  .pre-commit-config.yaml  README.md  bors.toml  codecov.yml  workshop.yaml
mir-ci/: hatch_build.py  pyproject.toml  readme.md
mir-ci/mir_ci/: .coveragerc  __init__.py  apps.py  benchmarker.py  cgroups.py  conftest.py  display_server.py  output_watcher.py  program.py  pytest.ini  pytest_plugin.py  robot_test_drag_and_drop.py  robot_wrapper.py  screencopy_tracker.py  test_apps_can_run.py  test_display_configuration.py  test_drag_and_drop.py  test_drag_and_drop_robot.py  test_screencopy.py  test_screencopy_bandwidth.py  test_server.py  test_tests.py  virtual_pointer.py  virtual_pointer_debug.py  wayland_client.py
mir-ci/mir_ci/clients/: drag_and_drop_demo.py  maximizing_gtk_app.py
mir-ci/mir_ci/fixtures/: __init__.py  apps.py  servers.py
mir-ci/mir_ci/interfaces/: benchmarkable.py  benchmarker_backend.py
mir-ci/mir_ci/lib/: __init__.py  benchmarker.py  cgroups.py
mir-ci/mir_ci/program/: app.py  display_server.py  program.py
mir-ci/mir_ci/protocols/: __init__.py
mir-ci/mir_ci/robot/libraries/: DragAndDrop.py  Screencopy.py  ScreencopyListener.py  VirtualPointer.py  WaylandHid.py
mir-ci/mir_ci/robot/resources/: drag_and_drop.resource  screencopy.resource  variables.resource
mir-ci/mir_ci/robot/tests/: drag_and_drop.robot  test_drag_and_drop.robot  tests.robot
mir-ci/mir_ci/robot_libraries/: Screencopy.py  WaylandHid.py
mir-ci/mir_ci/robot_resources/: screencopy.resource
mir-ci/mir_ci/tests/: display_server_static_file.py  test_apps_can_run.py  test_display_configuration.py  test_drag_and_drop.py  test_fractional_scale_v1.py  test_mir_flutter_app.py  test_osk.py  test_scale.py  test_screencopy_bandwidth.py  test_server.py  test_tests.py  test_vnc.py
mir-ci/mir_ci/tests/clients/: drag_and_drop_demo.py  (+1 more)
mir-ci/mir_ci/wayland/: output_watcher.py  screencopy_tracker.py  virtual_pointer.py  wayland_client.py
mir-ci/tools/: virtual_pointer_debug.py
(+77 files in other folders)
